--- a/GA_application/GA_application/GA_application.csproj
+++ b/GA_application/GA_application/GA_application.csproj
@@ -64,6 +64,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Features.cs" />
+    <Compile Include="Fitness.cs" />
     <Compile Include="GeneticAlgorithm.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
