--- a/GA_application/GA_application/GA_application.csproj
+++ b/GA_application/GA_application/GA_application.csproj
@@ -65,6 +65,7 @@
     </Compile>
     <Compile Include="Features.cs" />
     <Compile Include="Fitness.cs" />
+    <Compile Include="Results.cs" />
     <Compile Include="Function.cs" />
     <Compile Include="GeneticAlgorithm.cs" />
     <Compile Include="MainWindow.xaml.cs">
